--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,28 @@
     transform: rotate(360deg);
   }
 }
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 10px solid #f3f3f3; /* Light grey */
+  border-top: 10px solid #383636; /* Black */
+  border-radius: 50%;
+  animation: spinner 1.5s linear infinite;
+}
+
+.spin {
+  display: block;
+  width: 40px;
+  height: 40px;
+  margin: 250px auto;
+  border: 3px solid transparent;
+  border-radius: 50%;
+  border-top-color: #ff8800;
+  animation: spin 1s ease infinite;
+}
+@keyframes spin {
+  to {
+    -webkit-transform: rotateZ(360deg);
+  }
+}
